--- a/package.json
+++ b/package.json
@@ -5,45 +5,56 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/caveat": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-firebase/analytics": "^23.7.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.25",
+    "expo": "~54.0.30",
+    "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
-    "expo-constants": "~18.0.10",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
-    "expo-font": "~14.0.9",
+    "expo-firebase-analytics": "^8.0.0",
+    "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
-    "expo-image": "~3.0.10",
-    "expo-image-picker": "~17.0.9",
-    "expo-linking": "~8.0.9",
+    "expo-image": "~3.0.11",
+    "expo-image-manipulator": "^14.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
-    "expo-router": "~6.0.15",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^12.6.0",
     "firebase-admin": "^13.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-compressor": "^1.13.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "sentry-expo": "^7.2.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
