--- a/app.json
+++ b/app.json
@@ -1,37 +1,61 @@
 {
   "expo": {
-    "name": "swingthoughts",
+    "name": "Swing Thoughts",
     "slug": "swingthoughts",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/AppIcon.png",
     "scheme": "swingthoughts",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.swingthoughts.app",
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "Allow Swing Thoughts to access your photos to share golf moments",
+        "NSCameraUsageDescription": "Allow Swing Thoughts to take photos and videos",
+        "NSMicrophoneUsageDescription": "Allow Swing Thoughts to record audio with videos",
+        "NSLocationWhenInUseUsageDescription": "Allow Swing Thoughts to access your location to find nearby golf courses",
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
-
     "android": {
+      "package": "com.swingthoughts.app",
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "backgroundColor": "#0D5C3A",
+        "foregroundImage": "./assets/images/AppIcon.png"
       },
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "permissions": [
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ]
     },
-
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png",
-      "bundler": "metro",
-      "polyfill": "polyfills/firebase-auth.js"
+      "favicon": "./assets/images/AppIcon.png",
+      "bundler": "metro"
     },
-
     "plugins": [
       "expo-router",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Swing Thoughts to access your location to find nearby golf courses"
+        }
+      ],
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow Swing Thoughts to record audio with videos"
+        }
+      ],
+      "react-native-compressor",
       [
         "expo-splash-screen",
         {
@@ -43,11 +67,33 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Allow Swing Thoughts to access your photos to share golf moments",
+          "cameraPermission": "Allow Swing Thoughts to take photos and videos",
+          "microphonePermission": "Allow Swing Thoughts to record audio with videos"
+        }
+      ],
+      "expo-font",
+      "expo-web-browser",
+      [
+        "sentry-expo",
+        {
+          "organization": "swing-thoughts",
+          "project": "swing-thoughts-mobile"
+        }
       ]
     ],
-
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "5686fe17-0cdc-427b-8271-50f77a43f14b"
+      }
     }
   }
 }
