--- a/firebase.json
+++ b/firebase.json
@@ -35,6 +35,8 @@
     "ui": {
       "enabled": true
     }
+  },
+  "extensions": {
+    "firestore-send-email": "firebase/firestore-send-email@0.2.4"
   }
 }
-
