--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "sentry-expo": "^7.2.0"
+    "sentry-expo": "~7.0.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
