--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,12 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
 .env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # typescript
 *.tsbuildinfo
@@ -41,3 +46,8 @@ app-example
 # generated native folders
 /ios
 /android
+
+# Firebase
+firebase.json
+google-services.json
+GoogleService-Info.plist
