--- a/eas.json
+++ b/eas.json
@@ -6,13 +6,43 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBgnus2kERSsimt21ynAbGxAU0sUGrfodM",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "swing-thoughts-1807b.firebaseapp.com",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "swing-thoughts-1807b",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "swing-thoughts-1807b.firebasestorage.app",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "163594563736",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "1:163594563736:web:c60fa8fe7b59dacc99e0ed",
+        "EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID": "G-PYXW1L8LGQ",
+        "EXPO_PUBLIC_GOLFCOURSE_API_KEY": "Z4EX2SEUPXVVYDXRUJZFXXBJSA"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBgnus2kERSsimt21ynAbGxAU0sUGrfodM",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "swing-thoughts-1807b.firebaseapp.com",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "swing-thoughts-1807b",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "swing-thoughts-1807b.firebasestorage.app",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "163594563736",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "1:163594563736:web:c60fa8fe7b59dacc99e0ed",
+        "EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID": "G-PYXW1L8LGQ",
+        "EXPO_PUBLIC_GOLFCOURSE_API_KEY": "Z4EX2SEUPXVVYDXRUJZFXXBJSA"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBgnus2kERSsimt21ynAbGxAU0sUGrfodM",
+        "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "swing-thoughts-1807b.firebaseapp.com",
+        "EXPO_PUBLIC_FIREBASE_PROJECT_ID": "swing-thoughts-1807b",
+        "EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET": "swing-thoughts-1807b.firebasestorage.app",
+        "EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "163594563736",
+        "EXPO_PUBLIC_FIREBASE_APP_ID": "1:163594563736:web:c60fa8fe7b59dacc99e0ed",
+        "EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID": "G-PYXW1L8LGQ",
+        "EXPO_PUBLIC_GOLFCOURSE_API_KEY": "Z4EX2SEUPXVVYDXRUJZFXXBJSA"
+      }
     }
   },
   "submit": {
