Fix React versions to match Expo SDK requirements

--- a/app.json
+++ b/app.json
@@ -77,14 +77,7 @@
         }
       ],
       "expo-font",
-      "expo-web-browser",
-      [
-        "sentry-expo",
-        {
-          "organization": "swing-thoughts",
-          "project": "swing-thoughts-mobile"
-        }
-      ]
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
