--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-video-thumbnails": "~10.0.8",
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
