--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.30",
     "expo-application": "~7.0.8",
     "expo-av": "~16.0.8",
@@ -43,6 +44,7 @@
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
+    "ngeohash": "^0.6.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -57,6 +59,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@types/ngeohash": "^0.6.8",
     "@types/react": "~19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
