--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "expo-application": "~7.0.8",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
@@ -35,7 +35,9 @@
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.21",
+    "expo-server-sdk": "^4.0.0",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
@@ -44,6 +46,7 @@
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.3",
     "ngeohash": "^0.6.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
