--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,7 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "channel": "development",
       "env": {
         "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBgnus2kERSsimt21ynAbGxAU0sUGrfodM",
         "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "swing-thoughts-1807b.firebaseapp.com",
@@ -20,6 +21,7 @@
     },
     "preview": {
       "distribution": "internal",
+      "channel": "preview",
       "env": {
         "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBgnus2kERSsimt21ynAbGxAU0sUGrfodM",
         "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "swing-thoughts-1807b.firebaseapp.com",
@@ -33,6 +35,7 @@
     },
     "production": {
       "autoIncrement": true,
+      "channel": "production",
       "env": {
         "EXPO_PUBLIC_FIREBASE_API_KEY": "AIzaSyBgnus2kERSsimt21ynAbGxAU0sUGrfodM",
         "EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN": "swing-thoughts-1807b.firebaseapp.com",
