--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo-google-fonts/caveat": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
+    "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "5.0.1",
     "@react-native-picker/picker": "2.11.1",
@@ -22,6 +23,7 @@
     "dotenv": "^17.2.3",
     "expo": "~54.0.30",
     "expo-application": "~7.0.8",
+    "expo-audio": "~1.1.1",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
@@ -42,6 +44,8 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.16",
+    "expo-video": "~3.0.15",
     "expo-video-thumbnails": "~10.0.8",
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.7.0",
