league and firestore rules updates

--- a/app.json
+++ b/app.json
@@ -85,7 +85,8 @@
       "expo-font",
       "expo-web-browser",
       "expo-video",
-      "expo-audio"
+      "expo-audio",
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true
