--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "expo-server-sdk": "^4.0.0",
+    "expo-updates": "~29.0.16",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.3"
   },
