--- a/functions/package.json
+++ b/functions/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "firebase-functions-test": "^3.4.1",
+    "graphql": "^16.12.0",
     "typescript": "^5.7.3"
   }
 }
