Changes to RoundScores

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
     },
     "android": {
       "package": "com.swingthoughts.app",
+      "softwareKeyboardLayoutMode": "adjustResize",
       "adaptiveIcon": {
         "backgroundColor": "#0D5C3A",
         "foregroundImage": "./assets/images/AppIcon.png"
