Changes to Invitationals

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-blur": "~15.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.13",
+    "expo-contacts": "~15.0.11",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
@@ -42,6 +43,7 @@
     "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.21",
     "expo-server-sdk": "^4.0.0",
+    "expo-sms": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
