--- a/app.json
+++ b/app.json
@@ -43,7 +43,8 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.ACCESS_FINE_LOCATION",
         "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.MODIFY_AUDIO_SETTINGS"
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.READ_CONTACTS"
       ]
     },
     "web": {
@@ -59,6 +60,12 @@
           "android": {
             "windowSoftInputMode": "adjustResize"
           }
+        }
+      ],
+      [
+      "expo-contacts",
+        {
+          "contactsPermission": "SwingThoughts needs access to your contacts to invite players to your invitational."
         }
       ],
       [
